# mineplacer

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: deploy.yml
src/: asset.rs  game.rs  lib.rs  main.rs  model.rs  tag.rs  view.rs
web/: game.wasm  index.html  manifest.json  sw.js
