[package]
name = "mineplacer"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sile/mineplacer"
repository = "https://github.com/sile/mineplacer"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = "0.4.17"
pagurus = { version = "0.6.3", features = ["fixed_window", "random", "image", "wasm"]}
png = "0.17.8"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# TODO: remove
[patch.crates-io]
pagurus = { path = "../pagurus/" }
